--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,10 @@
       <type>pom</type>
       <version>2.11.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
   </dependencies>
 </project>
