--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,10 @@
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-fuseki</artifactId>
+      <version>0.2.7</version>
+    </dependency>
   </dependencies>
 </project>
